* Bug #43528: Correct wrong color of left and right border of input fields
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.2/ucs-4.2-0@77243 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-web/css/form/Common.styl
+++ b/management/univention-web/css/form/Common.styl
@@ -61,13 +61,13 @@
 
 .umc .dijitSelect:before,
 .umc .dijitTextBox:before
-	border-left: thin solid #e0e0e0
+	border-left: thin solid $base-border-color
 	left: 0
 
 .umc .dijitSelect:after,
 .umc .dijitTextBox:after
 	right: 0
-	border-right: thin solid #e0e0e0
+	border-right: thin solid $base-border-color
 
 .umc .dijitSelect,
 .umc .dijitSelect .dijitButtonContents,
